--- a/mediagoblin/static/css/base.css
+++ b/mediagoblin/static/css/base.css
@@ -457,11 +457,9 @@ text-align: center;
 }
 
 .form_field_label {
-  margin-bottom: 4px;
-}
-
-.form_field_label {
   font-size:1.125em;
+  margin-bottom: 0;
+  padding: 10px 0;
 }
 
 .form_field_description {
